Closed Bug 324369 Opened 19 years ago Closed 19 years ago

Page History doesn't set to new value when Preferences closed

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: julespayne, Assigned: sfraser_bugs)

Details

(Keywords: fixed1.8.0.1, fixed1.8.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060121 Camino/1.0b2+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060121 Camino/1.0b2+ When changing the number of days to store history in the History tab of Camino Preferences, the new value is not stored if the Preference pane is closed immediately and then Camino is quitted. If another pane is selected (eg Tabs) and then the Preference pane is closed and Camino is quitted then the value is stored. Reproducible: Always Steps to Reproduce: 1.Open Camino Preferences 2.Select History Tab 3.Set number of days to a new value (eg 1) 4.Close Camino Preferences 5.Quit Camino 6.Reopen Camino 7.Open Camino Preferences 8.Select History Tab 9.New value is not set, old value still exists Actual Results: The new history value did not come into effect until another Preference pane was selected before closing Camino preferences. Expected Results: The new history value should be effective immediately. This has occured in all the nightlies for the last week, and, I believe, in 1 Beta 2. I had not changed the history vaue prior to these releases.
I suspect this may be another case where we don't save data when the field ends editing, like (but not a duplicate of) bug 311838. cl
What's really bad is that if you close the prefs, then reopen the prefs (at step 5, instead of quitting), it looks like the new value has taken when it really hasn't. I wonder if this is related to some of our other "prefs don't stick" cases (bug 316861)? See also bug 191032 comment 13 for another place where our prefs aren't instant-apply. We should prolly audit our prefs at some point to see if there are others where this is still a problem. Mike/Simon, is this quick/simple enough to slip into 1.0?
Status: UNCONFIRMED → NEW
Component: General → Preferences
Ever confirmed: true
Target Milestone: --- → Camino1.1
One issue here is that we really should purge history when you change the number of days, but that might lock up Camino for a few seconds; we might not want to do that on the fly.
Oh, we're only saving the pref when you tab out of the field. Other than that, the pref does impact the visible history items right away.
Assignee: mikepinkerton → sfraser_bugs
Attached patch PatchSplinter Review
This patch fixes the bug, and adds validation code that will prevent you from leaving the tab if the value is non-numeric.
Fixed.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: