Fix bug 324369: make sure we save a changed history value when closing the prefs pane (if the user hasn't tabbed to another control), while validating that it's a number.